--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,50 @@
-__pycache__/
-*.pyc
-.env
+# Environnements virtuels
+venv/
+env/
 mon_venv/
+.venv/
+
+# Fichiers de configuration
+*.env
+.env
+
+# Fichiers Python compilés
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Fichiers SQLite (base de données locale)
+db.sqlite3
+*.sqlite3
+
+# Fichiers/dossiers de logs
+*.log
+logs/
+*.pot
+
+# Fichiers de cache
+*.cache
+.cache/
+
+# Pytest
+.pytest_cache/
+
+# VS Code settings
+.vscode/
+
+# macOS
+.DS_Store
+
+# JetBrains IDE (PyCharm, etc.)
+.idea/
+
+# Node modules (si frontend en React par exemple)
+node_modules/
+
+# Dossiers de migrations que tu veux ignorer (optionnel)
+**/migrations/*.pyc
+**/migrations/__pycache__/
+
+# Media et static (optionnel si générés automatiquement)
+media/
+staticfiles/
